crates/swc_ecma_react_compiler/tests/fixtures/upstream/preserve-memo-validation/error.false-positive-useMemo-infer-mutate-deps/error.txt
Found 1 error:

Compilation Skipped: Existing memoization could not be preserved

React Compiler has skipped optimizing this component because the existing manual memoization could not be preserved. This dependency may be mutated later, which could cause the value to change unexpectedly.

error.false-positive-useMemo-infer-mutate-deps.ts:14:6
  12 |   return useMemo(() => {
  13 |     return identity(val);
> 14 |   }, [val]);
     |       ^^^ This dependency may be modified later
  15 | }
  16 |
  17 | export const FIXTURE_ENTRYPOINT = {
